refact: donate 로직 수정